--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
 .vs
 LgVideoChatDemo/x64/
-x64/
+x64/Release/Http2Parser.lib
+x64/Release/Http2Parser.pdb
+x64/Release/HttpParser.lib
+x64/Release/HttpParser.pdb
+x64/Release/HttpStack.lib
+x64/Release/HttpStack.pdb
+x64/Release/SipPlatform.lib
+x64/Release/SipPlatform.pdb
+x64/Release/TcpStack.lib
+x64/Release/TcpStack.pdb
+x64/Release/TestWebRtc.exe
+x64/Release/TestWebRtc.exp
+x64/Release/TestWebRtc.lib
+x64/Release/TestWebRtc.pdb
+x64/Release/XmlParser.lib
+x64/Release/XmlParser.pdb
+Http2Parser/x64/
+HttpParser/x64/
+HttpStack/x64/
+JsonParser/x64/
+SipPlatform/x64/
+TcpStack/x64/
+TestWebRtc/x64/
+XmlParser/x64/
+
